# Enable-Touchpad

./: CLAUDE.md  README.md  package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  core.rs  lib.rs  main.rs  osd.rs  tray.rs
src-tauri/src/core/: hotkey_manager.rs  input_contoller.rs  input_controller.rs  mouse_emulator.rs  state.rs
