[package]
name = "enable-touchpad"
version = "0.1.0"
description = "https://github.com/NIyueeE/Enable-Touchpad"
authors = ["NIyueeE <cuijy21@mails.tsinghua.edu.cn>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "enable_touchpad_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [ "tray-icon" ] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rdev = "0.5"
enigo = "0.2.0"
once_cell = "1.19"
log = "0.4"
simple_logger = "1.16"
parking_lot = "0.12" 
atomic_refcell = "0.1"
crossbeam = "0.8"
thiserror = "1.0"

# Platform-specific dependencies
[target.'cfg(windows)'.dependencies]
windows = { version = "0.56", features = ["Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging", "Win32_System_Threading", "Win32_System_SystemServices"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
objc-foundation = "0.1"
objc_id = "0.1"

[target.'cfg(target_os = "linux")'.dependencies]
x11 = "2.21"
